added spell check

--- a/Model_training.ipynb
+++ b/Model_training.ipynb
@@ -494,8 +494,24 @@
    "outputs": [],
    "source": [
     "def get_word(letter):\n",
-    "    word = \"\".join(letter)\n",
-    "    return word"
+    "    prediction = \"\".join(letter)\n",
+    "    dictionary = enchant.Dict(\"en_US\")\n",
+    "    if dictionary.check(prediction):\n",
+    "        return prediction, '\\n100% match'\n",
+    "    else:\n",
+    "        sim = dict() \n",
+    "        suggestions = set(dictionary.suggest(prediction))\n",
+    "\n",
+    "        for word in suggestions:\n",
+    "            measure = difflib.SequenceMatcher(None, prediction, word).ratio()\n",
+    "            sim[measure] = word\n",
+    "        \n",
+    "        if not suggestions:\n",
+    "            return prediction, '\\nUnrecognizable'\n",
+    "        elif len(suggestions) == 1:\n",
+    "            return prediction, \"\\nMost likely the word is:\", sim[max(sim.keys())]\n",
+    "        else:\n",
+    "            return prediction, \"\\nMost likely the word is:\", sim[max(sim.keys())], '\\nAll suggestions', dictionary.suggest(prediction)"
    ]
   },
   {
@@ -537,7 +553,7 @@
    "source": [
     "letter,image = get_letters(\"crown_bright.jpg\")\n",
     "word = get_word(letter)\n",
-    "print(word)\n",
+    "print(*word)\n",
     "plt.imshow(image)"
    ]
   },
@@ -580,7 +596,7 @@
    "source": [
     "letter,image = get_letters(\"word.jpg\")\n",
     "word = get_word(letter)\n",
-    "print(word)\n",
+    "print(*word)\n",
     "plt.imshow(image)"
    ]
   },
@@ -623,7 +639,7 @@
    "source": [
     "letter,image = get_letters(\"line.jpg\")\n",
     "word = get_word(letter)\n",
-    "print(word)\n",
+    "print(*word)\n",
     "plt.imshow(image)"
    ]
   },
@@ -666,7 +682,7 @@
    "source": [
     "letter,image = get_letters(\"table_bright.jpg\")\n",
     "word = get_word(letter)\n",
-    "print(word)\n",
+    "print(*word)\n",
     "plt.imshow(image)"
    ]
   },
@@ -711,7 +727,7 @@
    "source": [
     "letter,image = get_letters(\"Gregory.jpg\")\n",
     "word = get_word(letter)\n",
-    "print(word)\n",
+    "print(*word)\n",
     "plt.imshow(image)"
    ]
   },
@@ -756,7 +772,7 @@
    "source": [
     "letter,image = get_letters(\"pelletier.jpg\")\n",
     "word = get_word(letter)\n",
-    "print(word)\n",
+    "print(*word)\n",
     "plt.imshow(image)"
    ]
   },
@@ -801,7 +817,7 @@
    "source": [
     "letter,image = get_letters(\"antoine.jpg\")\n",
     "word = get_word(letter)\n",
-    "print(word)\n",
+    "print(*word)\n",
     "plt.imshow(image)"
    ]
   },
@@ -846,7 +862,7 @@
    "source": [
     "letter,image = get_letters(\"tessa.jpg\")\n",
     "word = get_word(letter)\n",
-    "print(word)\n",
+    "print(*word)\n",
     "plt.imshow(image)"
    ]
   },
@@ -891,7 +907,7 @@
    "source": [
     "letter,image = get_letters(\"alexis.jpg\")\n",
     "word = get_word(letter)\n",
-    "print(word)\n",
+    "print(*word)\n",
     "plt.imshow(image)"
    ]
   },
