changed the model to Amir's version, this has the best results so far

--- a/Model_training.ipynb
+++ b/Model_training.ipynb
@@ -270,6 +270,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "b4335118",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 64\n",
+    "epochs = 20\n",
+    "num_classes = 26"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "id": "cb8a61df",
    "metadata": {},
@@ -277,18 +289,23 @@
    "source": [
     "model = Sequential()\n",
     "\n",
-    "model.add(Conv2D(32, (2, 2), padding = \"same\", activation='relu', input_shape=(32,32,1)))\n",
-    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
-    "model.add(Conv2D(64, (2, 2), activation='relu'))\n",
-    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
-    "model.add(Conv2D(128, (2, 2), activation='relu'))\n",
-    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
+    "model.add(Conv2D(32, kernel_size=(3, 3),activation='linear',padding='same',input_shape=(32,32,1)))\n",
+    "model.add(LeakyReLU(alpha=0.1))\n",
+    "model.add(MaxPooling2D((2, 2),padding='same'))\n",
     "model.add(Dropout(0.25))\n",
-    " \n",
+    "model.add(Conv2D(64, (3, 3), activation='linear',padding='same'))\n",
+    "model.add(LeakyReLU(alpha=0.1))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2),padding='same'))\n",
+    "model.add(Dropout(0.25))\n",
+    "model.add(Conv2D(128, (3, 3), activation='linear',padding='same'))\n",
+    "model.add(LeakyReLU(alpha=0.1))                  \n",
+    "model.add(MaxPooling2D(pool_size=(2, 2),padding='same'))\n",
+    "model.add(Dropout(0.4))\n",
     "model.add(Flatten())\n",
-    "model.add(Dense(128, activation='relu'))\n",
-    "model.add(Dropout(0.2))\n",
-    "model.add(Dense(26, activation='softmax'))"
+    "model.add(Dense(128, activation='linear'))\n",
+    "model.add(LeakyReLU(alpha=0.1))           \n",
+    "model.add(Dropout(0.3))\n",
+    "model.add(Dense(num_classes, activation='softmax'))"
    ]
   },
   {
@@ -380,7 +397,7 @@
     }
    ],
    "source": [
-    "history = model.fit(train_X,train_Y, epochs=8, validation_data = (val_X, val_Y),  verbose=1)"
+    "history = model.fit(train_X, train_Y, batch_size=batch_size,epochs=epochs,verbose=1,validation_data=(val_X, val_Y))"
    ]
   },
   {
