Added Knowledge Base with hyperparameters of model

--- a/Model_training.ipynb
+++ b/Model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "97c67a57",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,8 @@
     "from keras import optimizers\n",
     "from keras import backend as K\n",
     "from keras.layers import Dense, Activation, Flatten, Dense,MaxPooling2D, Dropout\n",
-    "from keras.layers import Conv2D, MaxPooling2D, BatchNormalization"
+    "from keras.layers import Conv2D, MaxPooling2D, BatchNormalization\n",
+    "import rdflib as rdf"
    ]
   },
   {
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "03899a77",
    "metadata": {},
    "outputs": [],
@@ -270,14 +271,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b4335118",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "BadSyntax",
+     "evalue": "at line 7 of <>:\nBad syntax (objectList expected) at ^ in:\n\"...b'-syntax-ns#>.\\n\\nind:hyp0 a class:Hyperparameter;\\n\\t\\trdfs:label'^b' batch_size;\\n\\t\\trdfs:Literal 64.\\n\\nind:hyp1 a class:Hyperparam'...\"",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[0;32mD:\\Anaconda\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3369\u001b[0m in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  Input \u001b[0;32mIn [3]\u001b[0m in \u001b[0;35m<cell line: 2>\u001b[0m\n    knowledge_source = graph.parse(file=open(\"KB.n3\", \"r\"), format=\"text/n3\")\n",
+      "  File \u001b[0;32mD:\\Anaconda\\lib\\site-packages\\rdflib\\graph.py:1267\u001b[0m in \u001b[0;35mparse\u001b[0m\n    raise se\n",
+      "  File \u001b[0;32mD:\\Anaconda\\lib\\site-packages\\rdflib\\graph.py:1258\u001b[0m in \u001b[0;35mparse\u001b[0m\n    parser.parse(source, self, **args)  # type: ignore[call-arg]\n",
+      "  File \u001b[0;32mD:\\Anaconda\\lib\\site-packages\\rdflib\\plugins\\parsers\\notation3.py:1947\u001b[0m in \u001b[0;35mparse\u001b[0m\n    TurtleParser.parse(self, source, conj_graph, encoding, turtle=False)\n",
+      "  File \u001b[0;32mD:\\Anaconda\\lib\\site-packages\\rdflib\\plugins\\parsers\\notation3.py:1913\u001b[0m in \u001b[0;35mparse\u001b[0m\n    p.loadStream(stream)\n",
+      "  File \u001b[0;32mD:\\Anaconda\\lib\\site-packages\\rdflib\\plugins\\parsers\\notation3.py:434\u001b[0m in \u001b[0;35mloadStream\u001b[0m\n    return self.loadBuf(stream.read())  # Not ideal\n",
+      "  File \u001b[0;32mD:\\Anaconda\\lib\\site-packages\\rdflib\\plugins\\parsers\\notation3.py:440\u001b[0m in \u001b[0;35mloadBuf\u001b[0m\n    self.feed(buf)\n",
+      "  File \u001b[0;32mD:\\Anaconda\\lib\\site-packages\\rdflib\\plugins\\parsers\\notation3.py:466\u001b[0m in \u001b[0;35mfeed\u001b[0m\n    i = self.directiveOrStatement(s, j)\n",
+      "  File \u001b[0;32mD:\\Anaconda\\lib\\site-packages\\rdflib\\plugins\\parsers\\notation3.py:486\u001b[0m in \u001b[0;35mdirectiveOrStatement\u001b[0m\n    j = self.statement(argstr, i)\n",
+      "  File \u001b[0;32mD:\\Anaconda\\lib\\site-packages\\rdflib\\plugins\\parsers\\notation3.py:733\u001b[0m in \u001b[0;35mstatement\u001b[0m\n    j = self.property_list(argstr, i, r[0])\n",
+      "  File \u001b[0;32mD:\\Anaconda\\lib\\site-packages\\rdflib\\plugins\\parsers\\notation3.py:1083\u001b[0m in \u001b[0;35mproperty_list\u001b[0m\n    self.BadSyntax(argstr, j, \"objectList expected\")\n",
+      "\u001b[1;36m  File \u001b[1;32mD:\\Anaconda\\lib\\site-packages\\rdflib\\plugins\\parsers\\notation3.py:1646\u001b[1;36m in \u001b[1;35mBadSyntax\u001b[1;36m\u001b[0m\n\u001b[1;33m    raise BadSyntax(self._thisDoc, self.lines, argstr, i, msg)\u001b[0m\n",
+      "\u001b[1;36m  File \u001b[1;32m<string>\u001b[1;36m\u001b[0m\n\u001b[1;31mBadSyntax\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "graph = rdf.Graph()\n",
+    "knowledge_source = graph.parse(file=open(\"KB.n3\", \"r\"), format=\"text/n3\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e07c061d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 64\n",
-    "epochs = 20\n",
-    "num_classes = 26"
+    "def query_result(label):\n",
+    "    result = graph.query(f\"\"\"SELECT ?value\n",
+    "       WHERE {{\n",
+    "          ?ind rdfs:label {label}.\n",
+    "          ?ind rdf:value ?value.\n",
+    "       }}\"\"\")\n",
+    "    return label_result(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28343750",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def label_result(result):\n",
+    "    for row in result:\n",
+    "        data = int(row.asdict()['value'])\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3079f023",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = query_result('\\'batch_size\\'')\n",
+    "epochs = query_result('\\'epochs\\'')\n",
+    "CNN_kernel_size = query_result('\\'CNN_kernel_size\\'')\n",
+    "MaxPooling_kernel_size = query_result('\\'MaxPooling_kernel_size\\'')"
    ]
   },
   {
@@ -289,23 +354,23 @@
    "source": [
     "model = Sequential()\n",
     "\n",
-    "model.add(Conv2D(32, kernel_size=(3, 3),activation='linear',padding='same',input_shape=(32,32,1)))\n",
+    "model.add(Conv2D(32, kernel_size=(CNN_kernel_size, CNN_kernel_size),activation='linear',padding='same',input_shape=(32,32,1)))\n",
     "model.add(LeakyReLU(alpha=0.1))\n",
-    "model.add(MaxPooling2D((2, 2),padding='same'))\n",
+    "model.add(MaxPooling2D((MaxPooling_kernel_size, MaxPooling_kernel_size),padding='same'))\n",
     "model.add(Dropout(0.25))\n",
-    "model.add(Conv2D(64, (3, 3), activation='linear',padding='same'))\n",
+    "model.add(Conv2D(64, (CNN_kernel_size, CNN_kernel_size), activation='linear',padding='same'))\n",
     "model.add(LeakyReLU(alpha=0.1))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2),padding='same'))\n",
+    "model.add(MaxPooling2D(pool_size=(MaxPooling_kernel_size, MaxPooling_kernel_size),padding='same'))\n",
     "model.add(Dropout(0.25))\n",
-    "model.add(Conv2D(128, (3, 3), activation='linear',padding='same'))\n",
+    "model.add(Conv2D(128, (CNN_kernel_size, CNN_kernel_size), activation='linear',padding='same'))\n",
     "model.add(LeakyReLU(alpha=0.1))                  \n",
-    "model.add(MaxPooling2D(pool_size=(2, 2),padding='same'))\n",
+    "model.add(MaxPooling2D(pool_size=(MaxPooling_kernel_size, MaxPooling_kernel_size),padding='same'))\n",
     "model.add(Dropout(0.4))\n",
     "model.add(Flatten())\n",
     "model.add(Dense(128, activation='linear'))\n",
     "model.add(LeakyReLU(alpha=0.1))           \n",
     "model.add(Dropout(0.3))\n",
-    "model.add(Dense(num_classes, activation='softmax'))"
+    "model.add(Dense(26, activation='softmax'))"
    ]
   },
   {
@@ -408,6 +473,23 @@
    "outputs": [],
    "source": [
     "model.save('model.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87dc9fa2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def kb_update(label, value, old_value):\n",
+    "    result = graph.update(f\"\"\"DELETE {{?ind rdf:value {old_value}}}\n",
+    "       INSERT {{?ind rdf:value {value}}}\n",
+    "       WHERE {{\n",
+    "          ?ind rdfs:label '{label}'\n",
+    "       }}\"\"\")\n",
+    "    knowledge_source.serialize(destination=\"KB.n3\")\n",
+    "    return print(f'{label} value updated!')"
    ]
   },
   {
