Improved kb_update function (now you don't need to pass 3 variables when you call the function, only 2 needed)

--- a/Model_training.ipynb
+++ b/Model_training.ipynb
@@ -482,8 +482,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def kb_update(label, value, old_value):\n",
-    "    result = graph.update(f\"\"\"DELETE {{?ind rdf:value {old_value}}}\n",
+    "def kb_update(label, value):\n",
+    "    result = graph.update(f\"\"\"DELETE {{?ind rdf:value {globals()[label]}}}\n",
     "       INSERT {{?ind rdf:value {value}}}\n",
     "       WHERE {{\n",
     "          ?ind rdfs:label '{label}'\n",
